config changes and some other refactoring